syntax = "proto3";

option csharp_namespace = "Messages";

package XPRTZ;

message Xprt {
  int32 id = 1;
  int32 badgeNumber = 2;
  string firstName = 3;
  string lastName = 4;
  int64 geboorteDatum = 5;
  repeated string skills = 6;
}

message GetAllRequest {}

message GetByBadgeNumberRequest {
  int32 badgeNumber = 1;
}
message XprtRequest {
  Xprt xprt = 1;
}
message XprtResponse {
  Xprt xprt = 1;
}
message AddPhotoRequest {
  bytes data = 1;
}
message AddPhotoResponse {
  bool isOk = 1;
}

service XprtService {
  rpc GetByBadgeNumber (GetByBadgeNumberRequest) returns (XprtResponse);
  rpc GetAll (GetAllRequest) returns (stream XprtResponse);
  rpc Save (XprtRequest) returns (XprtResponse);
  rpc SaveAll (stream XprtRequest) returns (stream XprtResponse);
  rpc AddPhoto (stream AddPhotoRequest) returns (AddPhotoResponse);
}